Update notes, credit

--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,9 @@
           <p>
             ** Under the MHA plan, lowrise zoning (LR1, LR2 and LR3) is redefined to be more dense compared to its previous definition, even if the zoning code remains the same.
         </div>
+        <div class="credit">
+          Thomas Wilburn / The Seattle Times
+        </div>
       </main>
     </responsive-child>
 
