New chatter, notes

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
 
     <responsive-child>
       <main class="interactive">
-        <h2>Where the rezone takes place</h2>
+        <h2>Where Seattle’s upzones would take place</h2>
         <p>
-          The city's Mandatory Housing Affordability initiative will make zoning changes between five density levels (as listed below) based on displacement impact, transit, and affordable housing options. Lowrise zoning (LR1, LR2, and LR3) is also being redefined to be more dense.
+          The Seattle City Council is considering legislation that would make in 27 urban villages and some other areas while imposing new requirements on developers to help create affordable housing. The changes would occur across various density levels. Most land now zoned exclusively for single-family homes would not be affected.
 
         <ul class="density-table">
           <% json.levels.forEach(function(row) { %>
@@ -47,9 +47,7 @@
         </div>
         <div class="notes">
           <p>
-            * Level 0 is not specified within the city's MHA plans, but has been added to show the transition between single-family homes and denser residential options.
-          <p>
-            ** Under the MHA plan, lowrise zoning (LR1, LR2 and LR3) is redefined to be more dense compared to its previous definition, even if the zoning code remains the same.
+            * Under the plan, the city’s lowrise zones (LR1, LR2 and LR3) would be redefined to allow more density.
         </div>
         <div class="credit">
           Thomas Wilburn / The Seattle Times
