--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
       <main class="interactive">
         <h2>Where Seattle’s upzones would take place</h2>
         <p>
-          The Seattle City Council is considering legislation that would make changes in 27 urban villages and some other areas while imposing new requirements on developers to help create affordable housing. The changes would occur across various density levels. Most land now zoned exclusively for single-family homes would not be affected.
+          TThe Seattle City Council is considering legislation that would make changes in 27 urban villages and some other areas while imposing new requirements on developers to help create affordable housing. The changes would occur across various density levels. Most land now zoned exclusively for single-family homes would not be affected.<br><br><b><i>Update:</i></b> The council made some amendments to the legislation on February 25. Those amendments ARE NOT reflected in the map below but are <a href="http://www.seattle.gov/council/committees/citywidemha/citywide-mha-amendments">described here.</a>
 
         <ul class="density-table">
           <% json.levels.forEach(function(row) { %>
@@ -47,7 +47,7 @@
         </div>
         <div class="notes">
           <p>
-            * Under the plan, the city’s low-rise zones (LR1, LR2 and LR3) would be redefined to allow more density.
+            *Under the plan, the city’s low-rise zones (LR1, LR2 and LR3) would be redefined to allow more density.
         </div>
         <div class="credit">
           Thomas Wilburn / The Seattle Times
